<resources>
    <string name="app_name">Wear It</string>
    <string name="login_title">LOGIN</string>
    <string name="email_title">Email Address</string>
    <string name="password_title">Password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="need_to_Register">Open Account?</string>
    <string name="register_complete">COMPLETE</string>
    <string name="fullname_register">Full Name</string>
    <string name="register_title">REGISTER</string>
    <string name="already_account">Login to account?</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>