<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:background="@color/light_blue">


    <ImageView
        android:id="@+id/header_logo"
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/login_title"/>

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:text="@string/register_button_text"
        android:textColor="@color/blue"
        android:textSize="70px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_logo" />

    <TextView
        android:id="@+id/fullname_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:text="@string/fullname_register"
        android:textColor="@color/blue"
        android:textSize="50px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_title"/>
    <EditText
        android:id="@+id/register_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullname_title"
        android:layout_marginLeft="100px"
        android:layout_marginRight="100px"
        android:layout_marginTop="20px"
        android:textSize="70px"
        android:padding="20px"/>
    <TextView
        android:id="@+id/register_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:text="@string/email_title"
        android:textColor="@color/blue"
        android:textSize="50px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_fullname"/>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email_title"
        android:layout_marginLeft="100px"
        android:layout_marginRight="100px"
        android:layout_marginTop="20px"
        android:textSize="70px"
        android:padding="20px"/>

    <TextView
        android:id="@+id/register_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:text="@string/password_title"
        android:textColor="@color/blue"
        android:textSize="50px"
        app:layout_constraintTop_toBottomOf="@id/register_email"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password_title"
        android:inputType="textPassword"
        android:layout_marginLeft="100px"
        android:layout_marginRight="100px"
        android:layout_marginTop="20px"
        android:textSize="70px"
        android:padding="20px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/register_password">

        <Button
            android:id="@+id/register_form_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/blue"
            android:text="@string/register_complete" />
        <Button
            android:id="@+id/Login_form_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/login_title"
            android:background="@color/blue"/>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>