<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/light_blue">

    <ImageView
        android:id="@+id/header_logo"
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/login_title"/>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:text="@string/login_title"
        android:textColor="@color/blue"
        android:textSize="70px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_logo" />

    <TextView
        android:id="@+id/login_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:text="@string/email_title"
        android:textColor="@color/blue"
        android:layout_marginLeft="100px"
        android:textSize="50px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_title"
        android:layout_marginLeft="100px"
        android:layout_marginRight="100px"
        android:layout_marginTop="20px"
        android:textSize="70px"
        android:padding="20px"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/login_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:text="@string/password_title"
        android:textColor="@color/blue"
        android:layout_marginLeft="100px"
        android:textSize="50px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_title"
        android:layout_marginLeft="100px"
        android:layout_marginRight="100px"
        android:layout_marginTop="20px"
        android:textSize="70px"
        android:padding="20px"
        android:inputType="textPassword"
        android:textColor="@color/white"/>
    4

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/login_password">

        <Button
            android:id="@+id/Login_form_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/login_title"
            android:background="@color/blue"/>

        <Button
            android:id="@+id/Register_form_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/blue"
            android:text="@string/register_button_text" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>